@@ -1,5 +1,6 @@
 Revision history for HTML::FormWidgets
 
+         - Textarea simplified
          - Will use the L10N object to do localisation in preference
          - to message hash
          - If render_field return null the so does render
